--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,9 @@ code {
 }
 
 /* Nav */
+#nav-bar-id {
+  z-index: 2;
+}
 
 .nav-mello {
   font-family: "Sigmar One", cursive;
@@ -63,7 +66,7 @@ code {
 }
 
 #cart-count {
-  background-color: #f0a500;
+  background-color: #35d0ba;
   color: white;
   border-radius: 50px;
   padding: 1px 7px 1px 4px;
@@ -81,11 +84,33 @@ code {
   font-family: "Sigmar One", cursive;
   margin: 6% auto;
   width: 100vw;
+  z-index: 2;
 }
 
 #bonfire {
-  max-height: 100vh;
-  min-width: 100vw;
+  /* max-height: 100vh;
+  min-width: 100vw; */
+
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  /* Specific to this particular image */
+  #bonfire {
+    left: 50%;
+    margin-left: -512px; /* 50% */
+  }
 }
 
 .credit {
@@ -105,6 +130,7 @@ code {
   margin: 40vh auto;
   width: 100vw;
   font-size: 2rem;
+  z-index: 2;
 }
 
 @media screen and (max-width: 780px) {
@@ -122,6 +148,7 @@ code {
     width: 100vw;
     font-size: 2rem;
     padding: 0 15px;
+    z-index: 2;
   }
 }
 
@@ -134,6 +161,10 @@ code {
 .card-title > a {
   color: black;
   font-size: 2.5rem;
+}
+
+.card-body {
+  min-width: 250px;
 }
 
 .card-title > a:hover {
@@ -161,8 +192,38 @@ code {
 }
 
 .item-btn:hover {
-  background-color: #e45826;
-  border-color: #e45826;
+  background-color: black;
+  border: none;
+}
+
+.add-cart {
+  background-color: transparent;
+  margin-left: 1vw;
+  border-color: #35d0ba;
+}
+
+.add-cart i {
+  color: #35d0ba;
+}
+
+#modal-box-cart-add {
+  background-color: rgb(50, 59, 59);
+  color: white;
+  border: #e45826 2px inset;
+}
+
+.modal-header {
+  margin: auto;
+}
+
+.modal-footer {
+  display: unset;
+  border-top: none;
+}
+
+.modal-header h5 {
+  font-size: 2rem;
+  font-family: "Gowun Batang", serif;
 }
 
 /* PRODUCT DETAIL */
@@ -276,18 +337,23 @@ form {
     width: 15vw;
   }
 
-  .cart-screen {
-    display: block;
+  #order-sum {
+    margin-right: 5vw;
   }
 }
 
 @media screen and (max-width: 480px) {
   #order-sum {
-    margin: 15rem auto;
+    position: absolute;
+    margin: 60vh auto;
+    width: 100vw;
   }
   .cart-items {
-    width: unset;
+    width: 80vw;
     margin-bottom: 10px;
+    min-width: unset;
+
+    padding: 0px;
   }
   .cart-screen {
     display: block;
@@ -384,4 +450,45 @@ form {
   font-weight: bold;
   right: 0;
   left: 0;
+}
+
+/* Menu Cart Display */
+
+#nav-img {
+  width: 15%;
+  float: left;
+}
+
+#cart-item-name {
+  display: block;
+  padding-top: 10px;
+  font-size: 16px;
+}
+
+#cart-item-quantity {
+  color: lightslategray;
+}
+
+#cart-item-price {
+  float: right;
+}
+
+.subtotal-nav {
+  font-weight: bold;
+  text-align: center;
+  border-top: lightslategrey 2px solid;
+}
+
+.nav-cart-links {
+  display: grid;
+}
+
+.chk-btn {
+  background-color: #35d0ba;
+  color: white;
+  border: none;
+}
+
+.chk-btn:hover {
+  background-color: black;
 }
