format and update logout button

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,12 @@ code {
   font-weight: bold;
 }
 
+.logout-btn {
+  background-color: transparent;
+  color: #f0a500;
+  border: none;
+}
+
 /* Home Screen */
 
 #big-mello {
