--- a/src/App.css
+++ b/src/App.css
@@ -393,6 +393,33 @@ form {
   .cart-screen {
     display: block;
   }
+
+  .logout-btn {
+    background-color: transparent;
+    color: #f0a500;
+    border: none;
+    margin: 0;
+    display: block;
+    padding: 0.5rem 1rem;
+    height: 40px;
+  }
+
+  .logout-btn:hover {
+    background-color: transparent;
+    color: #35d0ba;
+  }
+
+  #nav-user-div {
+    margin: unset;
+  }
+
+  #order-num {
+    text-overflow: ellipsis;
+  }
+
+  #return-link {
+    font-size: 1rem;
+  }
 }
 
 /* CHECKOUT */
